advanced/policies/05-allow-ingress-from-xns-client-one.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-app-allow-another-client
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: another-demo-client
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: another-ns
